Commit all the changes I've made and push

--- a/src/pages/support.astro
+++ b/src/pages/support.astro
@@ -32,29 +32,38 @@ const meta = {
 		<div class="grid grid-cols-6 gap-8">
 			<!-- Ko-Fi Section -->
 			<div
-				class="border-2 rounded-lg flex flex-col border-black col-span-3 px-8 py-4"
+				class="border-2 rounded-lg flex flex-col border-black col-span-3 px-8 pt-4"
 			>
 				<!-- <div class="w-[66%]"> -->
-				<h1 class="text-2xl font-bold">
+				<h1 class="text-3xl font-bold">
 					<a
 						href="https://ko-fi.com/geauxweisbeck4"
-						class="hover:text-orange-500 hover:underline"
-						>Support Andrew on Ko-Fi</a
+						class="text-sky-500 hover:underline"
+						>Support on Ko-Fi</a
 					>
 				</h1>
-				<p class="text-md mt-8">
-					If you enjoy Andrew's content and would like to support his work,
-					consider buying him a coffee! Your support helps keep the creativity
-					flowing and is greatly appreciated.
-				</p>
-				<br />
+				<ul class="list-disc list-inside mt-6">
+					<li>
+						<a href="https://ko-fi.com/geauxweisbeck4">Ko-Fi Home Page</a>
+					</li>
+					<li>
+						<a href="https://ko-fi.com/geauxweisbeck4/shop"
+							>Ko-Fi Merchandise Shop</a
+						>
+					</li>
+					<li>
+						<a href="https://ko-fi.com/geauxweisbeck4/supporters"
+							>Ko-Fi Supporters Page</a
+						>
+					</li>
+				</ul>
+				
 				<div class="flex gap-6 mt-6">
 					<a href="https://ko-fi.com/Z8Z2D853F" target="_blank"
 						><img
 							height="40"
 							style="border:0px;height:40px;"
 							src="https://storage.ko-fi.com/cdn/kofi6.png?v=6"
-							border="0"
 							alt="Buy Me a Coffee at ko-fi.com"
 						/></a
 					>
@@ -74,19 +83,28 @@ const meta = {
 				class="border-2 rounded-lg border-black flex flex-col col-span-3 px-8 py-4"
 			>
 				<!-- <div class="w-[66%] text-right"> -->
-				<h1 class="text-2xl font-bold">
+				<h1 class="text-3xl font-bold">
 					<a
-						class="hover:text-yellow-300 hover:underline"
+						class="text-yellow-300 hover:underline"
 						href="https://buymeacoffee.com/geauxweisbeck4"
-						>Buy Andrew a Coffee</a
+						>Buy Me a Coffee!</a
 					>
 				</h1>
-				<p class="text-md mt-8">
-					If you enjoy Andrew's content and would like to support his work,
-					consider buying him a coffee! Your support helps keep the creativity
-					flowing and is greatly appreciated.
-				</p>
-				<br />
+				<ul class="list-disc list-inside mt-6">
+					<li>
+						<a href="https://www.buymeacoffee.com/GeauxWeisbeck4"
+							>Buy Me A Coffee Home Page</a
+						>
+					</li>
+					<li>
+						<a href="https://www.buymeacoffee.com/GeauxWeisbeck4/supporters"
+							>Buy Me A Coffee Supporters Page</a
+						>
+					</li>
+					<li>
+						
+					</li>
+				</ul>
 				<div class="flex gap-6 mt-6">
 					<a href="https://www.buymeacoffee.com/GeauxWeisbeck4" target="_blank"
 						><img
