--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import NotePreview from '../components/note/NotePreview.astro';
 import { getAllPosts } from '../utils/post';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import { collectionDateSort } from '../utils/date';
+import CategoryAccordian from '../components/ui/CategoryAccordian.astro';
 
 // Posts
 const MAX_POSTS = 10;
@@ -50,15 +51,14 @@ const latestNotes = allNotes.sort(collectionDateSort).slice(0, MAX_NOTES);
 		</div>
 	</section>
 
-	<h1 class="text-3xl font-bold text-black mt-10">WeisGarden News</h1>
 
 	<section class="mt-16">
-		<h2 class="text-accent2 title text-3xl mb-6">What's New? (Work in Progress)</h2>
-		<p class="text-md text-red-700">This part of the website will contain any news or any updates that you should be aware of. It will also contain a section for things that are being worked on or other tasks that are being planned to be worked on if feasible. As of now, it is sort of a work in progress.</p>
+		<h2 class="text-accent-2 title text-3xl mb-6">Content Categories</h2>
+		<CategoryAccordian />
 	</section>
 
 
-	<h1 class="text-3xl font-bold text-black mt-10">Featured Content</h1>
+	<h1 class="text-3xl font-bold mt-10">Featured Content</h1>
 
 	<!-- Blog Posts -->
 
